--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 delete_useless.ipynb
+11_code/reproduce_phishpedia/trained_models
+11_code/reproduce_phishpedia/train_siamese/bit_pytorch_train
+11_code/reproduce_phishpedia/train_ob
+11_code/reproduce_phishpedia/LOGO_FEATS.npy
+11_code/reproduce_phishpedia/LOGO_FILES.npy
+11_code/reproduce_phishintention
+11_code/run_Dynaphish
+11_code/Involution
+11_code/PhishZoo
+11_code/VisualPhishnet
+11_code/EMD
