--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 delete_useless.ipynb
+11_code/reproduce_phishpedia/__pycache__
 11_code/reproduce_phishpedia/trained_models
 11_code/reproduce_phishpedia/train_siamese/bit_pytorch_train
 11_code/reproduce_phishpedia/train_ob
