--- a/11_code/reproduce_phishpedia/configs.yaml
+++ b/11_code/reproduce_phishpedia/configs.yaml
@@ -1,13 +1,21 @@
 
 ELE_MODEL: # element recognition model -- logo only
   CFG_PATH: 'configs/faster_rcnn.yaml'
-  WEIGHTS_PATH: 'train_ob/output/model_final.pth'
+  WEIGHTS_PATH: 'trained_models/model_final.pth'
   DETECT_THRE: 0.05
 
 # expand277_new, replace the path to your path
 SIAMESE_MODEL:
   NUM_CLASSES: 277
-  WEIGHTS_PATH: 'trained_models/bit.pth.tar'
+  WEIGHTS_PATH: 'trained_models/bit_new.pth.tar'
   TARGETLIST_PATH: '../../data/targetlist/expand277_new'
+  MATCH_THRE: 0.83
+  DOMAIN_MAP_PATH: 'trained_models/domain_map.pkl'
+
+# expand277, replace the path to your path
+SIAMESE_MODEL:
+  NUM_CLASSES: 277
+  WEIGHTS_PATH: 'trained_models/bit.pth.tar'
+  TARGETLIST_PATH: '../../data/targetlist/expand277'
   MATCH_THRE: 0.83
   DOMAIN_MAP_PATH: 'trained_models/domain_map.pkl'
