--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 delete_useless.ipynb
+**/__pycache__/
 11_code/reproduce_phishpedia/__pycache__
 11_code/reproduce_phishpedia/train_siamese/__pycache__
 11_code/reproduce_phishpedia/trained_models
@@ -6,7 +7,12 @@ delete_useless.ipynb
 11_code/reproduce_phishpedia/train_ob/__pycache__
 11_code/reproduce_phishpedia/LOGO_FEATS.npy
 11_code/reproduce_phishpedia/LOGO_FILES.npy
-11_code/reproduce_phishintention
+11_code/reproduce_phishintention/AWL/__pycache__
+11_code/reproduce_phishintention/CRP_Classifier/__pycache__
+11_code/reproduce_phishintention/CRP_Locator_Neglect
+11_code/reproduce_phishintention/OCR_Siamese/__pycache__
+11_code/reproduce_phishintention/OCR_Siamese/lib
+11_code/reproduce_phishintention/trained_models
 11_code/run_Dynaphish
 11_code/Involution
 11_code/PhishZoo
