--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 delete_useless.ipynb
 **/__pycache__/
+**/.DS_Store
 11_code/reproduce_phishpedia/__pycache__
 11_code/reproduce_phishpedia/train_siamese/__pycache__
 11_code/reproduce_phishpedia/trained_models
