--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 delete_useless.ipynb
+*.tar*
 **/__pycache__/
 **/.DS_Store
+*.npy
 11_code/reproduce_phishpedia/__pycache__
 11_code/reproduce_phishpedia/train_siamese/__pycache__
 11_code/reproduce_phishpedia/trained_models
@@ -14,7 +16,11 @@ delete_useless.ipynb
 11_code/reproduce_phishintention/OCR_Siamese/__pycache__
 11_code/reproduce_phishintention/OCR_Siamese/lib
 11_code/reproduce_phishintention/trained_models
-11_code/run_Dynaphish
+11_code/run_Dynaphish/Dynaphish/google-cloud-sdk
+11_code/run_Dynaphish/Dynaphish/knowledge_expansion/api_key.txt
+11_code/run_Dynaphish/Dynaphish/knowledge_expansion/discoverylabel.json
+11_code/run_Dynaphish/Dynaphish/MyXdriver_pub
+11_code/run_dy
 11_code/Involution
 11_code/PhishZoo
 11_code/VisualPhishnet
