--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,17 @@ delete_useless.ipynb
 11_code/run_Dynaphish/knowledge_expansion/discoverylabel.json
 11_code/run_Dynaphish/MyXdriver_pub
 11_code/run_dy
-11_code/Involution
-11_code/PhishZoo
+11_code/Involution/involution_paddlepaddle/dataset/targetlist_expand277_feature.npy
+11_code/Involution/involution_paddlepaddle/dataset/targetlist_expand277_new_feature.npy
+11_code/Involution/involution_paddlepaddle/dataset/testing_expand277_feature.npy
+11_code/Involution/involution_paddlepaddle/dataset/testing_expand277_new_feature.npy
+11_code/Involution/involution_paddlepaddle/finetune277_models
+11_code/Involution/involution_paddlepaddle/finetune277_new_models
+11_code/Involution/involution_paddlepaddle/pretrained_models
+11_code/Involution/involution_paddlepaddle/save_models
+11_code/PhishZoo/dataset
+11_code/PhishZoo/dict_pred_brand.json
+11_code/PhishZoo/dict_similarity.json
+11_code/PhishZoo/domain_map.pkl
 11_code/VisualPhishnet
 11_code/EMD
