--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,9 @@ delete_useless.ipynb
 11_code/PhishZoo/dict_pred_brand.json
 11_code/PhishZoo/dict_similarity.json
 11_code/PhishZoo/domain_map.pkl
-11_code/VisualPhishnet
+11_code/VisualPhishnet/merge277_new
+11_code/VisualPhishnet/dataset
+11_code/VisualPhishnet/model277_new_2.h5
+11_code/VisualPhishnet/my_model2.h5
+11_code/VisualPhishnet/merge277
 11_code/EMD
