--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ delete_useless.ipynb
 11_code/VisualPhishnet/model277_new_2.h5
 11_code/VisualPhishnet/my_model2.h5
 11_code/VisualPhishnet/merge277
-11_code/EMD
+11_code/EMD/dataset
