--- a/.gitignore
+++ b/.gitignore
@@ -3,39 +3,40 @@ delete_useless.ipynb
 **/__pycache__/
 **/.DS_Store
 *.npy
-11_code/reproduce_phishpedia/__pycache__
-11_code/reproduce_phishpedia/train_siamese/__pycache__
-11_code/reproduce_phishpedia/trained_models
-11_code/reproduce_phishpedia/train_siamese/bit_pytorch_train
-11_code/reproduce_phishpedia/train_ob/__pycache__
-11_code/reproduce_phishpedia/LOGO_FEATS.npy
-11_code/reproduce_phishpedia/LOGO_FILES.npy
-11_code/reproduce_phishintention/AWL/__pycache__
-11_code/reproduce_phishintention/CRP_Classifier/__pycache__
-11_code/reproduce_phishintention/CRP_Locator_Neglect
-11_code/reproduce_phishintention/OCR_Siamese/__pycache__
-11_code/reproduce_phishintention/OCR_Siamese/lib
-11_code/reproduce_phishintention/trained_models
-11_code/run_Dynaphish/google-cloud-sdk
-11_code/run_Dynaphish/knowledge_expansion/api_key.txt
-11_code/run_Dynaphish/knowledge_expansion/discoverylabel.json
-11_code/run_Dynaphish/MyXdriver_pub
-11_code/run_dy
-11_code/Involution/involution_paddlepaddle/dataset/targetlist_expand277_feature.npy
-11_code/Involution/involution_paddlepaddle/dataset/targetlist_expand277_new_feature.npy
-11_code/Involution/involution_paddlepaddle/dataset/testing_expand277_feature.npy
-11_code/Involution/involution_paddlepaddle/dataset/testing_expand277_new_feature.npy
-11_code/Involution/involution_paddlepaddle/finetune277_models
-11_code/Involution/involution_paddlepaddle/finetune277_new_models
-11_code/Involution/involution_paddlepaddle/pretrained_models
-11_code/Involution/involution_paddlepaddle/save_models
-11_code/PhishZoo/dataset
-11_code/PhishZoo/dict_pred_brand.json
-11_code/PhishZoo/dict_similarity.json
-11_code/PhishZoo/domain_map.pkl
-11_code/VisualPhishnet/merge277_new
-11_code/VisualPhishnet/dataset
-11_code/VisualPhishnet/model277_new_2.h5
-11_code/VisualPhishnet/my_model2.h5
-11_code/VisualPhishnet/merge277
-11_code/EMD/dataset
+*.pth
+code/reproduce_phishpedia/__pycache__
+code/reproduce_phishpedia/train_siamese/__pycache__
+code/reproduce_phishpedia/models
+code/reproduce_phishpedia/train_siamese/bit_pytorch_train
+code/reproduce_phishpedia/train_ob/__pycache__
+code/reproduce_phishpedia/LOGO_FEATS.npy
+code/reproduce_phishpedia/LOGO_FILES.npy
+code/reproduce_phishintention/AWL/__pycache__
+code/reproduce_phishintention/CRP_Classifier/__pycache__
+code/reproduce_phishintention/CRP_Locator_Neglect
+code/reproduce_phishintention/OCR_Siamese/__pycache__
+code/reproduce_phishintention/OCR_Siamese/lib
+code/reproduce_phishintention/trained_models
+code/run_Dynaphish/google-cloud-sdk
+code/run_Dynaphish/knowledge_expansion/api_key.txt
+code/run_Dynaphish/knowledge_expansion/discoverylabel.json
+code/run_Dynaphish/MyXdriver_pub
+code/run_dy
+code/Involution/involution_paddlepaddle/dataset/targetlist_expand277_feature.npy
+code/Involution/involution_paddlepaddle/dataset/targetlist_expand277_new_feature.npy
+code/Involution/involution_paddlepaddle/dataset/testing_expand277_feature.npy
+code/Involution/involution_paddlepaddle/dataset/testing_expand277_new_feature.npy
+code/Involution/involution_paddlepaddle/finetune277_models
+code/Involution/involution_paddlepaddle/finetune277_new_models
+code/Involution/involution_paddlepaddle/pretrained_models
+code/Involution/involution_paddlepaddle/save_models
+code/PhishZoo/dataset
+code/PhishZoo/dict_pred_brand.json
+code/PhishZoo/dict_similarity.json
+code/PhishZoo/domain_map.pkl
+code/VisualPhishnet/merge277_new
+code/VisualPhishnet/dataset
+code/VisualPhishnet/model277_new_2.h5
+code/VisualPhishnet/my_model2.h5
+code/VisualPhishnet/merge277
+code/EMD/dataset
