--- a/code/reproduce_phishpedia/docker-test/env_phishpedia.yml
+++ b/code/reproduce_phishpedia/docker-test/env_phishpedia.yml
@@ -68,6 +68,7 @@ dependencies:
       - cloudpickle==3.1.0
       - contourpy==1.1.1
       - cycler==0.12.1
+      - detectron2==0.6+cu111
       - exceptiongroup==1.2.2
       - filelock==3.16.1
       - fonttools==4.55.2
@@ -136,6 +137,10 @@ dependencies:
       - threadpoolctl==3.5.0
       - tldextract==5.1.2
       - toml==0.10.2
+      - torch==1.9.0+cu111
+      - torchaudio==0.9.0
+      - torcheval==0.0.7
+      - torchvision==0.10.0+cu111
       - tqdm==4.67.1
       - trio==0.27.0
       - trio-websocket==0.11.1
