--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ delete_useless.ipynb
 **/.DS_Store
 *.npy
 *.pth
+code/reproduce_phishpedia/docker_useless
 code/reproduce_phishpedia/__pycache__
 code/reproduce_phishpedia/train_siamese/__pycache__
 code/reproduce_phishpedia/models
